# usb-construct

./: .buildinfo  .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  changelog.html  genindex.html  index.html  license.html  noxfile.py  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py
.doctrees/: changelog.doctree  environment.pickle  index.doctree  license.doctree
.doctrees/emitters/: index.doctree
.doctrees/types/: core.doctree  index.doctree  superspeed.doctree
.doctrees/types/descriptors/: cdc.doctree  dfu.doctree  index.doctree  microsoft.doctree  midi1.doctree  midi2.doctree  standard.doctree  uac1.doctree  uac2.doctree  uac3.doctree  uas3.doctree  webusb.doctree
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-documentation.yml  3-feature-request.yml  99-other.yml  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  docs.yaml  pr.yaml  tests.yaml
_static/: documentation_options.js
_static/css/: styles.css
contrib/: .flake8  coveragerc
contrib/packaging/: PKGBUILD.in
docs/: conf.py  index.md  license.md  requirements.txt
docs/_static/css/: styles.css
docs/_templates/: versions.html
docs/_templates/sidebar/: version_selector.html
docs/emitters/: index.md
docs/types/: core.md  index.md  superspeed.md
docs/types/descriptors/: cdc.md  dfu.md  index.md  microsoft.md  midi1.md  midi2.md  standard.md  uac1.md  uac2.md  uac3.md  uas3.md  webusb.md
emitters/: index.html
examples/: descriptor_builder.py  simple_descriptors.py
latest/: .buildinfo  CNAME  changelog.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
latest/.doctrees/: changelog.doctree  environment.pickle  index.doctree
latest/_static/: documentation_options.js
latest/emitters/: index.html
latest/types/: core.html  index.html  superspeed.html
main/: .buildinfo  changelog.html  genindex.html  index.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js
main/.doctrees/: changelog.doctree  codeautolink-cache.json  environment.pickle  index.doctree  license.doctree
main/_static/: documentation_options.js
main/emitters/: index.html
main/types/: core.html  index.html  superspeed.html
tests/: test_emitters_descriptors_standard.py  test_types.py  test_types_descriptors_standard.py  test_types_descriptors_uac2.py
tests/emitters/: test_construct_interop.py
tests/types/: test_types.py
types/: core.html  index.html  superspeed.html
types/descriptors/: cdc.html  dfu.html  index.html  microsoft.html  midi1.html  midi2.html  standard.html  uac1.html  uac2.html  uac3.html  uas3.html  webusb.html
usb_construct/: __init__.py
usb_construct/contextmgrs/: manager.py
usb_construct/emitters/: __init__.py  construct_interop.py  descriptor.py
usb_construct/types/: __init__.py  descriptor.py
usb_protocol/contextmgrs/: manager.py
usb_protocol/types/: __init__.py
v0.2.0/: .buildinfo  changelog.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
v0.2.0/.doctrees/: changelog.doctree  codeautolink-cache.json  environment.pickle  index.doctree
v0.2.0/emitters/: index.html
v0.2.0/types/: core.html  index.html  superspeed.html
v0.2.1/: .buildinfo  changelog.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
v0.2.1/.doctrees/: changelog.doctree  environment.pickle  index.doctree
v0.2.1/_static/: documentation_options.js
v0.2.1/emitters/: index.html
v0.2.1/types/: core.html  index.html  superspeed.html
(+161 files in other folders)
