# SPDX-License-Identifier: BSD-3-Clause
[project]
name = 'usb-construct'
description = 'Utilities, Data Structures, Constants, Parsers, and tools for working with USB data'
authors = [
	{ name = 'Aki Van Ness', email = 'aki@lethalbit.net' },
	{ name = 'Rachel Mant', email = 'git@dragonmux.network' },
	{ name = 'Katherine J. Temkin', email = 'k@ktemkin.com' },
	{ name = 'USB Construct Contributors' },
]
dynamic = ['version']
license = 'BSD-2-Clause'
license-files = ['LICENSE', 'LICENSE.docs']
readme = 'README.md'
requires-python = '>=3.11'
dependencies = [
	'construct'
]
keywords = [
	'USB',
]
classifiers = [
	'Development Status :: 4 - Beta',

	'Environment :: Console',
	'Environment :: Plugins',

	'Intended Audience :: Developers',
	'Intended Audience :: Science/Research',

	'Natural Language :: English',

	'Operating System :: OS Independent',

	'Programming Language :: Python :: 3.10',
	'Programming Language :: Python :: 3.11',
	'Programming Language :: Python :: 3.12',
	'Programming Language :: Python :: 3.13',

	'Topic :: Scientific/Engineering',
	'Topic :: Security',
	'Topic :: Software Development :: Libraries',
	'Topic :: System :: Hardware :: Universal Serial Bus (USB)',
]

[project.optional-dependencies]
dev = ['nox']

[project.urls]
source = 'https://github.com/shrine-maiden-heavy-industries/usb-construct'
issues = 'https://github.com/shrine-maiden-heavy-industries/usb-construct/issues'
documentation = 'https://usb-construct.shmdn.link/latest'
changelog = 'https://usb-construct.shmdn.link/latest/changelog.html'

[build-system]
requires = ['setuptools>=66', 'setuptools-scm>=8']
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
where = ['.']
exclude = [
	'contrib',
	'contrib.*',
	'docs',
	'docs.*',
	'examples',
	'examples.*',
	'tests',
	'tests.*',
]
namespaces = false

[tool.setuptools.package-data]
usb_construct = ['py.typed']

[tool.setuptools_scm]
version_scheme = 'guess-next-dev'
local_scheme = 'node-and-date'

# Testing Coverage
[tool.coverage.run]
branch = true
omit = [
	'*/noxfile.py',
	'*/__main__.py',
]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
	':nocov:',
	# Allow defensive code
	'^\s*raise AssertionError\b',
	'^\s*raise NotImplementedError\b',
	'^\s*raise NotImplemented\b',
	'^\s*raise$',
	# Typing-Related
	'^\s*if (False|TYPE_CHECKING):',
	': \.\.\.(\s*#.*)?$',
	'^ +\.\.\.$',
	'''-> ['"]?NoReturn['"]?:''',
	# Skipped/Failed tests
	'^\s*self\.skipTest\b',
	'^\s*self\.fail\b',
]
partial_branches = [
	':nobr:'
]

# Typechecking
[tool.pyright]
include = [
	'examples', 'tests', 'usb_construct'
]
exclude = [
	'**/__pycache__', '.nox', 'build', '.github', '.eggs', '*.egg-info'
]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
allow_redefinition = true
check_untyped_defs = true

# Code Formatting
[tool.ruff]
cache-dir = 'build/.ruff_cache'
src = [
	'examples', 'tests', 'usb_construct'
]
indent-width = 4
line-length = 120
respect-gitignore = true
target-version = 'py311'

# NOTE(aki):
# We can't use the Ruff formatter as is, and they refuse to add support for single quotes
# on docstring, among some other things, so this is just mostly here for reference.
[tool.ruff.format]
docstring-code-format = true
indent-style = 'tab'
line-ending = 'lf'
# Due to Ruff being stupid and not letting us use `'''` we have to use this
quote-style = 'preserve'

[tool.ruff.lint.flake8-quotes]
docstring-quotes = 'single'
inline-quotes  = 'single'
multiline-quotes = 'single'

[tool.ruff.lint.isort]
lines-after-imports = 1
